# Plotly-App-UK-houseprices

./: .gitignore  Data Pre-processing.ipynb  LICENSE  README.md  app.py  config.py  figures_utils.py  pyproject.toml  pythonanywhere_setup.sh  requirements.txt  setup.sh  setup_pythonanywhere.sh  setup_ubuntu.sh  utils.py
appData/: geodata_Greater London.csv  geodata_Midlands.csv  geodata_North England.csv  geodata_Scotland.csv  geodata_South East.csv  geodata_South West.csv  geodata_Wales.csv  price_ts.csv  schools_top_500.csv  sector_percentage_delta_1995.csv  sector_percentage_delta_1996.csv  sector_percentage_delta_1997.csv  sector_percentage_delta_1998.csv  sector_percentage_delta_1999.csv  sector_percentage_delta_2000.csv  sector_percentage_delta_2001.csv  sector_percentage_delta_2002.csv  sector_percentage_delta_2003.csv  sector_percentage_delta_2004.csv  sector_percentage_delta_2005.csv  sector_percentage_delta_2006.csv  sector_percentage_delta_2007.csv  sector_percentage_delta_2008.csv  sector_percentage_delta_2009.csv  sector_percentage_delta_2010.csv  sector_percentage_delta_2011.csv  sector_percentage_delta_2012.csv  sector_percentage_delta_2013.csv  sector_percentage_delta_2014.csv  sector_percentage_delta_2015.csv  sector_percentage_delta_2016.csv  sector_percentage_delta_2017.csv  sector_percentage_delta_2018.csv  sector_percentage_delta_2019.csv  sector_percentage_delta_2020.csv  sector_percentage_delta_2021.csv  sector_percentage_delta_2022.csv  sector_percentage_delta_2023.csv  sector_percentage_delta_2024.csv  sector_price_1995.csv  (+30 more)
assets/: geodata_Midlands.json  geodata_Scotland.csv  geodata_Scotland.json  geodata_South West.csv  geodata_South West.json  geodata_Wales.csv
input/geoData/: PostCode Region.csv
notebooks/: Data Pre-processing.ipynb
