[tool.poetry]
name = "uk_house_price"
version = "0.1.0"
description = ""
authors = ["ivanlai <ivan.ch.lai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

numpy = "^1.19.1"
pandas = "^1.1.1"
geopandas = "^0.8.1"
plotly = "^4.10.0"
dash = "^1.16.0"
dash_html_components = "^1.1.1"
dash_core_components = "^1.12.0"
dash_bootstrap_components = "^0.10.6"
Flask_Caching = "^1.7.1"
convertbng = "^0.6.32"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
