[project]
name = "plotly-app-uk-houseprices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convertbng>=0.7.5",
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "flask-caching>=2.3.1",
    "geopandas>=1.0.1",
    "gunicorn>=23.0.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true